# manual-dice-server

./: .gitignore  LICENSE  README.md  default.nix  dice_roller_server.py  flake.nix  pyproject.toml  result  shell.nix
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/.claude/: settings.local.json
worker/src/: index.ts  parser.ts  types.ts
