[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dice-roller-mcp"
version = "0.1.0"
description = "MCP server for dice rolling with GTK dialog support"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Sebastián", email = "your.email@example.com" }
]
dependencies = [
    "mcp>=0.1.0",
    "PyGObject>=3.42.0",
]

[project.scripts]
dice-roller-mcp = "dice_roller_server:main"

[project.urls]
Homepage = "https://github.com/sebastian-zm/manual-dice-server"
Repository = "https://github.com/sebastian-zm/manual-dice-server"
