[build-system]
requires = ["hatchling", "packaging"]
build-backend = "hatchling.build"

[project]
name = "dice-roller-mcp"
version = "0.1.0"
description = "MCP server for dice rolling with GTK dialog support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Sebastián", email = "sebastian@sebastian.software" }
]
dependencies = [
    "mcp>=0.1.0",
    "PyGObject>=3.42.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dice_roller_server.py"]

[project.scripts]
dice-roller-mcp = "dice_roller_server:main"

[project.urls]
Homepage = "https://github.com/sebastian-zm/manual-dice-server"
Repository = "https://github.com/sebastian-zm/manual-dice-server"
